Fixed: horizontal scrollbar problem on Chrome

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -117,6 +117,7 @@ h3 {
 
 .App {
     background: $main-linear-bg;
+    overflow-x: hidden;
 }
 
 .particles {
