--- a/src/styles/views/frontpage.scss
+++ b/src/styles/views/frontpage.scss
@@ -1,7 +1,6 @@
 @import "styles/variables.scss";
 
 .front-page {
-    position: static;
     display: flex;
     flex-direction: row;
     justify-content: center;
